@@ -86,6 +86,7 @@ Changelog for 1.3.31
 * Removed spurious commit saving orders (Chris T)
 * Removed check for reversing too many sales, since this poses problems 
   in corner cases with no good solutions (Chris T)
+* R5680-1, (tentatively) fixes to shipping/invoice onhand numbers (Chris T)
 
 Changelog for 1.3.30
 * Documented behavior of Outstanding Summary report (Chris T, 3601314)
